fix: center donut on mobile screen

--- a/donuttello/style.css
+++ b/donuttello/style.css
@@ -138,7 +138,15 @@ opacity: 0.4;
   #hamburger-menu {
     display: inline;
   }
+
 }
+
+@media screen and (max-width: 800px) {
+  #container #donut-canvas {
+    margin-left: -35%;
+  }
+}
+  
 
 section {
   background-image: url(public/assets/images/hero_image.png);
@@ -428,9 +436,6 @@ footer {
  padding-left: 3em;
 }
 
-.donut-container {
-  margin-top: -20px;
-}
 
 .donut {
   position: fixed;
@@ -442,6 +447,13 @@ footer {
   width: 100%;
   height: 100%;
 }
+
+#donut-canvas {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+
 
 
 
